Took out redundant ul color attr; addapp title

--- a/crapper-Jack.html
+++ b/crapper-Jack.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <h1>Exercise App</h1>
  <div id="t-form">
     <form id="t-input" method="post" action="/user" class="train-form">
       <ul>
